EXA: Fix exaGetPixmapFirstPixel() crash if the driver has a CreatePixmap hook.

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=16243